[workspace]
resolver        = "2"
# members = [ "pier-*"]
members = [ "pier-ws", "pier-core", "pier-ui" ]
# members = [ "pier-ws", "pier-cli" ]

[profile.release]
codegen-units = 1
lto   = true
panic = "abort"
strip = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[workspace.dependencies]
anyhow        = "1.0.102"
crossterm     = { version = "0.29.0", features = ["event-stream"] }
dirs   = "6.0.0"
# mlua = { version = "0.11.6", features = [ "anyhow", "async", "error-send", "lua55", "macros", "serde" ] }
ratatui       = "0.30"
tokio         = { version = "1.50.0", features = ["full"] }
tokio-stream  = "0.1.18"
toml          = { version = "0.9.5" }

