[package]
name        = "pier-core"
version     = "0.0.1"
edition     = "2024"
license     = "MIT"
authors     = [ "diankr" ]
description = "Pier core logic"
repository  = "https://github.com/diankr/pier"

[dependencies]
pier-macro = { path = "../pier-macro" }

# External dependencies
crossterm   = { workspace = true }
ratatui     = { workspace = true }
dirs        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
arboard     = { workspace = true }
chrono      = "0.4.39"

