[package]
name        = "pier-ui"
version     = "0.0.1"
edition     = "2024"
license     = "MIT"
authors     = [ "diankr" ]
description = "Pier UI components"
repository  = "https://github.com/diankr/pier"

[dependencies]
pier-core   = { path = "../pier-core" }
pier-macro  = { path = "../pier-macro" }
pier-config = { path = "../pier-config" }

# External dependencies
crossterm   = { workspace = true }
ratatui     = { workspace = true }

